修复雇员权限

--- a/app/views/admins/shops/acounts/shop_info.html.erb
+++ b/app/views/admins/shops/acounts/shop_info.html.erb
@@ -2,7 +2,9 @@
 
 <div class="container-fluid">
   <div class="span7 widget shop_info">
-    <a href="/shops/<%= @user_checking.shop.name %>/admins/apply_update" class="btn pull-right">申请审核</a>
+    <% if can? :manage, @shop %>
+      <a href="/shops/<%= @shop.name %>/admins/apply_update" class="btn pull-right">申请审核</a>
+    <% end %>
     <h4>商店信息</h4>
     <hr />
     <div class="row-fluid section">
@@ -116,7 +118,7 @@
         login: "<%= current_user.login %>",
       },
       targets: [
-        { el: $(".main_panle1"), input_name: "photo", photo: "<%= @user_checking.user.shop.try(:photo) %>" },
+        { el: $(".main_panle1"), input_name: "photo", photo: "<%= @shop.try(:photo) %>" },
         { el: $(".main_panle2"), input_name: "company_license_photo", photo: "<%= @user_checking.try(:company_license_photo) %>" },
         { el: $(".main_panle3"), input_name: "ower_photo", photo: "<%= @user_checking.try(:ower_photo) %>" }
       ]
