--- a/app/views/application/_people_sidebar.html.erb
+++ b/app/views/application/_people_sidebar.html.erb
@@ -30,14 +30,15 @@
               收货地址
             </a>
           </li>
-          <% unless @people.is_seller? %>
+
+          <% unless @people.is_seller? || @people.belongs_shop %>
             <li>
               <a class='people-create_shop' href="/completing_shop/authenticate_license">
                 我要开店
               </a>
             </li>
           <% else %>
-            <% if @people.shop.actived == false %>
+            <% if @people.shop  && @people.shop.actived == false %>
               <li><a href="#">商店审核中..</a></li>
             <% end %>
           <% end %>
