--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -39,13 +39,14 @@
     <div class='panel'>
       <h4><i class='icon-th-large'></i>分类商品
         <!-- <i class="icon-foursquare"></i> -->
-        <button class='btn select_all pull-right' style="margin-bottom:3px;">全选</button>
+        <!-- <button class='btn select_all pull-right' style="margin-bottom:3px;">全选</button> -->
       </h4>
       <div class='search-header'>
-        <div class="input-append controls-row">
+        <div class="row-fluid input-append controls-row">
           <form class='product'>
-            <input class="span8 search" type="search" id="search-input1" autocomplete=off>
-            <button type="submit" class="btn btn-transparent span4">搜索</button>
+            <input class="span6 search" type="search" id="search-input1" autocomplete=off>
+            <button type="submit" class="span3 btn btn-transparent">搜索</button>
+            <button type="button" class='span3 btn select_all'>全选</button>
           </form>
         </div>
       </div>
