--- a/app/views/admins/shops/employees/index.html.erb
+++ b/app/views/admins/shops/employees/index.html.erb
@@ -107,8 +107,8 @@
 </script>
 
 <script type="text/template" class='group-user-template'>
-  <div class='span2 alert alert-info group-user'>
-    <img class='img-rounded avatar' />
+  <div class='span4 alert alert-info group-user'>
+    <img src="{{ photos.icon }}" class='img-rounded avatar' />
       {{login}}
     <a href='javascript:void(0)' class='btn btn-danger remove-shop-user-group'>移除</a>
   </div>
