--- a/app/assets/stylesheets/shop_products.css.scss
+++ b/app/assets/stylesheets/shop_products.css.scss
@@ -77,6 +77,7 @@
         border: 5px solid rgba(219, 224, 193, 0.81);
         display:none; 
         position:absolute; 
+        left: -6px;
         background-color:white; 
         color:black;
         z-index:9999;
