--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1167,10 +1167,16 @@ h2 small {
 .scroll-load-msg{
   text-align: center;
   display: none;
-
+  .end_tip{
+    img{
+      width: auto;
+      height: auto;
+    }
+  }
   img{
-    width:50px;
-    height:50px;
+    margin-top: 10px;
+    width:70px;
+    height:70px;
   }
 }
 
