--- a/app/assets/stylesheets/wizard.css.scss
+++ b/app/assets/stylesheets/wizard.css.scss
@@ -27,12 +27,12 @@ h2 small {
   padding: 10px;
   #new_shop_auth{
     .file-box{
-      margin-left: 16%;
+      margin-left: auto;
     }
   }
   #new_user_auth{
     .file-box{
-      margin-left: 3%;
+      margin-left: auto;
     }
   }
 }
@@ -132,8 +132,8 @@ h2 small {
   border: 1px solid #ccc;
   .search-header {
     margin: 10px 10px 0px 10px;
-      padding-left: 20px;
-    }
+    padding-left: 20px;
+    
     .tree-nav {
       color: black;
       padding: 10px 0;
