--- a/app/views/shop_products/_preview_template.html.erb
+++ b/app/views/shop_products/_preview_template.html.erb
@@ -3,7 +3,7 @@
     <form>
       <div class='in-box'>
         {{#photos}}
-          <img src="{{avatar}}" class="preview a-{{id}}" alt />
+          <img src="{{avatar}}" class="preview a-{{id}}" />
         {{/photos}}
       </div>
 
@@ -17,7 +17,7 @@
 
       <div class='userinfo'>
         {{#seller.photos}}
-          <img src="{{icon}}" class='author ' alt="Author" />
+          <img src="{{icon}}" class='author' alt="Author" />
         {{/seller.photos}}
 
         {{#seller.name}}
