perfect place_holder

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -302,7 +302,7 @@ ul {
 	}
 
 	.search-btn {
-    position: absolute;
+    // position: absolute;
     z-index: 5;
     right: 0;
 		color: rgb(219, 194, 194);;
