--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -25,7 +25,7 @@
       <div id="categories" class="tab-pane active clearfix">
         <div class='search-header hide'>
           <div class="input-append controls-row">
-            <input class="span8" type="search" id="search-input3">
+            <input class="span8" type="text" id="search-input3">
             <button type="button" class="btn btn-transparent span4">搜索</button>
           </div>
         </div>
@@ -44,7 +44,7 @@
       <div class='search-header'>
         <div class="row-fluid input-append controls-row">
           <form class='product'>
-            <input class="span6 search" type="search" id="search-input1" autocomplete=off>
+            <input class="span6 search" type="text" id="search-input1" autocomplete=off>
             <button type="submit" class="span3 btn btn-transparent">搜索</button>
             <button type="button" class='span3 btn select_all'>全选</button>
           </form>
