--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -33,7 +33,7 @@
         </li>
       </ul>      
       <div class="input-prepend input-append">  
-        <input type="text" name='query' class="search-query" />
+        <input type="text" name='query' class="search-query"  placeholder="搜索商品，种类..." autocomplete='off'/>
         <div class="add-on search-btn">搜索</div>
       </div>
     </form>
