--- a/app/views/people/transactions/completed.html.erb
+++ b/app/views/people/transactions/completed.html.erb
@@ -13,8 +13,14 @@
 
       <div class='threeD-viewport'>
         <div class='orders card_list'>
-          <% @orders.each do |row| %>
-            <%= render_base_template "order_mini_row", :row => row %>
+          <% if @orders.count > 0 %>          
+            <% @orders.each do |row| %>
+              <%= render_base_template "order_mini_row", :row => row %>
+            <% end %>
+          <% else %>
+            <div class='widget no_result_notify'>
+              没有完成的担保交易！
+            </div>
           <% end %>
         </div>
       </div>
@@ -43,7 +49,13 @@
 
       <div class='threeD-viewport'>
         <div class='directs card_list'>
+          <% if @directs.count > 0 %>
           <%= render :partial => "people/direct_transactions/row", :collection => @directs, :as => :row %>
+          <% else %>
+            <div class='widget no_result_notify'>
+              没有完成的直接交易
+            </div>
+          <% end %>
         </div>
       </div>
 
