--- a/app/views/people/transactions/index.html.erb
+++ b/app/views/people/transactions/index.html.erb
@@ -14,8 +14,14 @@
 
       <div class='threeD-viewport'>
         <div class='orders card_list'>
-          <% @transactions.each do |row| %>
-            <%= render_base_template "order_mini_row", :row => row %>
+          <% if @transactions.count > 0 %>
+            <% @transactions.each do |row| %>
+              <%= render_base_template "order_mini_row", :row => row %>
+            <% end %>
+          <% else %>
+            <div class='widget'>
+              没有未完成的订单！
+            </div>
           <% end %>
         </div>
       </div>
