fix #605, 修复收获地址在ie，firefox 下不兼容的问题

--- a/app/views/people/delivery_addresses/_new.html.erb
+++ b/app/views/people/delivery_addresses/_new.html.erb
@@ -6,7 +6,7 @@
   <div class="modal-body">
     <%=render :partial => "delivery_addresses/form",
       :locals => {
-        :url => "",
+        :url => person_delivery_addresses_path(current_user),
         :address => address
       } %>      
   </div>
