--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -343,8 +343,11 @@
   }
 
   .address-list{
-    .address_table{
-      word-break: break-word;
+    word-break: break-all!important;
+    .address_table{ 
+      overflow:hidden;
+      word-wrap: break-word; /* Internet Explorer 5.5+, 6, 7, 8 compability-mode */
+      -ms-word-break: break-all; /* Internet Explorer 8 */ 
       width: 100%;
       .address_line{
         line-height: 30px;
