fix #614 (明日预告活动添加js)

--- a/app/views/activities/tomorrow.html.erb
+++ b/app/views/activities/tomorrow.html.erb
@@ -34,6 +34,11 @@
       el: '#activities'
     })
 
+    new ActivityPreview({
+      el: $('#activities'),
+      login: '<%= current_user.login %>'
+    })
+
     $("#category-sidebar .lv2_categories a").on("click", function(){
       $(this).parents(".lv2_categories").hide()
       category_id = $(this).attr("data-category_id")
