--- a/app/views/application/_header_wizard.html.erb
+++ b/app/views/application/_header_wizard.html.erb
@@ -1,5 +1,5 @@
-<header class="wizard page-header">
-  <div class="navbar affix-top" data-spy="affix" data-offset-top="20">
+<div class="wizard page-header">
+  <div class="navbar navbar-back affix-top" data-spy="affix" data-offset-top="20">
     <div class="navbar-inner">
       <ul id='topbar' class="nav pull-right">
         <li class="hidden-phone dropdown">
@@ -25,4 +25,4 @@
       </ul>
     </div>
   </div>
-</header>
+</div>
