fixed ie 8 invalid sequence utf-8

--- a/app/views/admins/shops/communities/index.html.erb
+++ b/app/views/admins/shops/communities/index.html.erb
@@ -62,7 +62,7 @@
     new CircleCreate({
       el: $(".create_circle"),
       current_shop: '<%= current_shop.name %>',
-      remote_url: "/shops/<%=current_shop.name %>/admins/circles"
+      remote_url: "<%= shop_admins_circles_path(current_shop) %>"
     })
     new CommunitySearch({
       el: $(".community")
