--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -301,7 +301,7 @@ ul {
   }
 
   .search-btn{  
-    margin-left: -38px;
+    margin-left: -38px !important;
     z-index: 5;    
     color: rgb(219, 194, 194);
     border: none;
