--- a/app/views/admins/shops/direct_transactions/index.html.erb
+++ b/app/views/admins/shops/direct_transactions/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class='row-fluid'>
   <div class='span12'>
-    <section class='widget'>
+    <div class='widget'>
       <table class='table table-striped table-images untransactions'>
         <thead>
           <tr>
@@ -22,7 +22,7 @@
         <tbody>
         </tbody>
       </table>
-    </section>
+    </div>
   </div>
 </div>
 <div class='direct_transaction_list'>
