--- a/app/views/admins/shops/transactions/pending.html.erb
+++ b/app/views/admins/shops/transactions/pending.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class='row-fluid'>
   <div class='span12'>
-    <section class='widget'>
+    <div class='widget'>
       <table class='table table-striped table-images untransactions'>
         <thead>
           <tr>
@@ -24,7 +24,7 @@
         <tbody>
         </tbody>
       </table>
-    </section>
+    </div>
   </div>
 </div>
 <div class='transaction-list'>
