--- a/app/views/activities/focus/_preview_template.html.erb
+++ b/app/views/activities/focus/_preview_template.html.erb
@@ -35,7 +35,7 @@
             {{/followed}}
           {{/is_self}}
         </p>
-        <i class='icon-bullhorn join-chat'>聊天</i>
+        <!-- <i class='icon-bullhorn join-chat'>聊天</i> -->
         <span class='title'>参与</span>
         <span>{{ participate}} </span>
         <span class='title'>喜欢</span>
