--- a/app/views/people/followings/_following_shop.html.erb
+++ b/app/views/people/followings/_following_shop.html.erb
@@ -11,9 +11,7 @@
           </a>
         </div>
         <div>
-          <label class='label label-success unfollow'>
-            取消关注
-          </label>
+          <%= follow_action(f.follow) %>
         </div>
       </div>
     </div>
