--- a/app/views/people/followings/followers.html.erb
+++ b/app/views/people/followings/followers.html.erb
@@ -1,34 +1,29 @@
 <% active_section :followers %>
-
-<div class='followers widget span8'>
-  <div class='follow-users'>
-    <h4 class='title'>关注我的用户</h4>
-    <% if @followers.count > 0 %>
-      <% @followers.each do |f| %>
-        <div class='alert alert-info follow'>
-          <div class='avatar'>
-            <img src="<%= f.user.icon %>" class="img-rounded" />
-          </div>
-          <div class='info'>
-            <div class='href_name'>
-              <a href="/people/<%= f.user.try(:login) %>" title="<%= f.user.try(:login) %>">
-                <%= f.user.try(:login) %>
-              </a>
+<div class='row-fluid'>
+  <div class='followers widget span8'>
+    <div class='follow-users'>
+      <h4 class='title'>关注我的用户</h4>
+      <% if @followers.count > 0 %>
+        <% @followers.each do |f| %>
+          <div class='alert alert-info follow'>
+            <div class='avatar'>
+              <img src="<%= f.user.icon %>" class="img-rounded" />
             </div>
-            <div>
-            <% unless current_user.nil? %>
-              <% if current_user.is_follower?(f.user_id) %>
-                <label class='label label-success'>互相关注</label>
-              <% elsif current_user != f.user %>
-                <label class='label label-success follow'>关注</label>
-              <% end %>
-            <% end %>
+            <div class='info'>
+              <div class='href_name'>
+                <a href="/people/<%= f.user.try(:login) %>" title="<%= f.user.try(:login) %>">
+                  <%= f.user.try(:login) %>
+                </a>
+              </div>
+              <div>
+              <%= follow_action(f.user) %>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
+      <% else %>
+        <div class='alert alert-warning notify-message'>暂时没有被关注</div>
       <% end %>
-    <% else %>
-      <div class='alert alert-warning notify-message'>暂时没有被关注</div>
-    <% end %>
+    </div>
   </div>
 </div>
