--- a/app/assets/stylesheets/people/community_people.css.scss
+++ b/app/assets/stylesheets/people/community_people.css.scss
@@ -162,3 +162,24 @@
     }
   }
 }
+
+.m_r{
+  margin-right: 10px;
+}
+#mySetting{
+  .circle_setting{
+    .tabbable{
+      margin-left: 30px;
+    }
+    .circle_info{
+      .introduce{
+        width: 340px;
+        margin-top: 10px;
+      }
+    }
+  }
+}
+
+
+
+
