--- a/app/views/activities/_template.html.erb
+++ b/app/views/activities/_template.html.erb
@@ -35,6 +35,6 @@
 </script>
 
 <script type="text/template" id='circle_template'>
-  <%=render "circles/template" %>
+  <%=render "circles/circle" %>
 </script>
 
