--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -109,12 +109,12 @@
             管 理
           </a>
         </li>
-        <li>
-          <a href="/shops/<%= current_user.shop.name %>/admins/communities">
+        <!-- <li>
+          <a href="/shops/<%#= current_user.shop.name %>/admins/communities">
             <i class='icon-group'></i>
             商 圈
           </a>
-        </li>
+        </li> -->
       </ul>
     </li>
   <% end %>
