--- a/app/views/application/_right_sidebar.html.erb
+++ b/app/views/application/_right_sidebar.html.erb
@@ -1,5 +1,5 @@
-<section class="right-sidebar widget widget-tabs">
+<div class="right-sidebar widget widget-tabs">
   <div class="body tab-content"></div>
-</section>
+</div>
 
 
