--- a/app/views/system/order_transactions/_check_info.html.erb
+++ b/app/views/system/order_transactions/_check_info.html.erb
@@ -21,11 +21,11 @@
       </tr>
       <tr>
         <td>卖家</td>
-        <td><%= @order_transaction.seller.name %></td>
+        <td><%= @order_transaction.seller.try(:name) %></td>
       </tr>
       <tr>
         <td>买家</td>
-        <td><%= @order_transaction.buyer.login %></td>
+        <td><%= @order_transaction.buyer.try(:login) %></td>
       </tr>
       <tr>
         <td>创建时间</td>
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <td>收货地址</td>
-        <td><%= @order_transaction.address.location %></td>
+        <td><%= @order_transaction.address.try(:location) %></td>
       </tr>
       <tr>
         <td>已接单</td>
@@ -57,7 +57,7 @@
       </tr>
       <tr>
         <td>配送地邮编</td>
-        <td><%= @order_transaction.address.zip_code %></td>
+        <td><%= @order_transaction.address.try(:zip_code) %></td>
       </tr>
       <tr>
         <td>支付方式</td>
