--- a/app/views/activities/focus/_right_bar.html.erb
+++ b/app/views/activities/focus/_right_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="dialog" id="activity-actions">
   <div class="modal-body">
     <img class="author_image" src="<%=activity.author.photos.header %>"  />
-    <a href="javascript:void(0)" class="btn btn-primary pull-right load_modal">分享活动</a> 
+    <!-- <a href="javascript:void(0)" class="btn btn-primary pull-right load_modal">分享活动</a>  -->
     <h4><%= activity.author.login %></h4>
     <p>关注 <%= activity.author.followings.count %></p>
     <p>粉丝 <%= activity.author.followers.count %></p>
