--- a/app/views/activities/auction/_right_bar.html.erb
+++ b/app/views/activities/auction/_right_bar.html.erb
@@ -3,7 +3,7 @@
     <a href='<%= person_path(activity.author.login) %>'>
       <img class="author_image" src="<%= activity.author.photos.header %>"  />
     </a>
-    <a href="javascript:void(0)" class="btn btn-primary pull-right load_modal">分享活动</a> 
+    <!-- <a href="javascript:void(0)" class="btn btn-primary pull-right load_modal">分享活动</a>  -->
     <h4><a href='<%= person_path(activity.author.login) %>'><%= activity.author.login %></a></h4>
     <p>关注 <%= activity.author.followings.count %></p>
     <p>粉丝 <%= activity.author.followers.count %></p>
