--- a/app/views/circles/_circle_setting.html.erb
+++ b/app/views/circles/_circle_setting.html.erb
@@ -13,7 +13,7 @@
         <input type="text" class="circle_name" value="<%=circle.name %>"/>
       </div>
       <div class="row-fluid">
-        <span class="span1 circle_icon m_r">封面</span>
+        <span class="span1 m_r">封面</span>
         <%= render "/circles/update_photo", circle: circle %>
       </div>
       <div class="row-fluid">
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="tab-pane" id="tab2">
-      <div>
+      <div class="circle_invite">
       <% if circle.is_manage?(current_user.id) %>
         <%= render "/communities/invite/new" %>
       <% end %>
@@ -54,6 +54,10 @@
     new CircleUpdate({
       el: $(".cirlce_info"),
       circle_id: <%=circle.id  %>
+    });
+    new InviteUserView({
+      el: $(".circle_invite"),
+      circle_id: '<%=circle.id  %>'
     })
   })
 </script>
