--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,7 +1,6 @@
 <div class="page-header">
   <!-- ie 8下面的背景 -->
-  <div class='navbar-back affix-top' data-spy="affix" data-offset-top="20">
-  </div>
+  <div class='navbar-back affix-top' data-spy="affix" data-offset-top="20"></div>
   <div class="navbar affix-top" data-spy="affix" data-offset-top="20">
     <div class="navbar-inner">
       <%= render "topbar" %>
