--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -310,6 +310,14 @@ ul {
     line-height: 20px;
     @include border-radius(1px);
     @include transparent(rgb(51,51,51),0.4);
+    display: inline-block;
+    line-height: 28px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 38px;
+    text-align: center;
+    font-size: 12px;
   }
 
   .input-prepend.input-append{
