--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -32,7 +32,7 @@
           </ul>
         </li>
       </ul>      
-      <div class="input-prepend input-append">  
+      <div class="search-wrap">  
         <input type="text" name='query' class="search-query"  placeholder="搜索商品，种类..." autocomplete='off'/>
         <div class="add-on search-btn">搜索</div>
       </div>
