--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -4,7 +4,7 @@
     <div class="paddings">
       <%= render  :partial => "people/base/user_info",
     :locals => { :url => "/people/#{ @people.login }/update_user_auth" } %>
-      <input type="button" class="modify pull-right btn btn-primary" value="修改">
+      <input type="button" class="modify pull-right btn btn-primary" value="修改" style="margin-right: 10%;">
     </div>
     <div class="paddings">
       <%= render :partial => "people/user_login_info" %>
