--- a/app/assets/stylesheets/people/community_people.css.scss
+++ b/app/assets/stylesheets/people/community_people.css.scss
@@ -163,13 +163,22 @@
   }
 }
 
-.m_r{
-  margin-right: 10px;
-}
+
+
 #mySetting{
   .circle_setting{
-    .tabbable{
+    .m_r{
+      margin-right: 20px;
+    }
+    .introduce{
+      width: 370px;
+      margin-top: 10px;
+    }
+    .tab-content{
       margin-left: 30px;
+    }
+    .m_r_10{
+      margin-right: 18px;
     }
     .circle_info{
       .introduce{
