--- a/app/views/circles/_circle_search.html.erb
+++ b/app/views/circles/_circle_search.html.erb
@@ -1,33 +1,3 @@
 <div class="circle">
-	<div class="span12">
-	  <div class='photo span5'>
-	    <img src="{{photos.header}}" />
-	  </div>
-	  <div class="info span7">
-	    {{#if isJoin}}
-	      {{#if isOwner}}
-	        <div class="pull-right">
-	          <a href="#mySetting" role="button" title="设置" data-value-id="{{ id }}" class="setting_load">
-	            <span class='icon-cog'></span>
-	          </a>
-	        </div>
-	         <span class="label label-warning">群主</span>
-	      {{else}}
-	        <div>
-	        	<span class="label label-warning">已加入</span>
-	        </div>
-	      {{/if}}
-	    {{ else }}
-	      <div>
-	      	<span data-value-id="{{ id }}" class="label label-warning add_circle">加入</span>
-	      </div>
-	    {{/if }}
-	    <div>
-	      {{name}}
-	    </div>
-	    <div>
-	      {{friend_count}} 个成员
-	    </div>
-	  </div>
-	</div>
+	<%=render "/circles/circle"%>
 </div>
